<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Jobs"
    android:background="#F6A938"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/search"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/jobsHeading"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/job_card"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardBackgroundColor="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:text="@string/jobTitle"
            android:textColor="#000"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/job_card1"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/job_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardBackgroundColor="@color/white"
       >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:text="@string/jobTitle"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:text="@string/jobType"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:text="@string/location"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:text="@string/date"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:text="@string/description"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:textSize="20sp" />

    </androidx.cardview.widget.CardView>




</RelativeLayout>

