<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
         />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:text="@string/app_name"
        android:textColor="#FFC107"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="1dp"
        />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/slogan"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:textColor="#FF9800"
        android:textSize="20sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/copyright"
        android:textColor="#FF9800"
        android:padding="5dp"
        android:textSize="16sp"
        />

</RelativeLayout>